# find . -name '*'.cpp -o -name '*'.hpp -o -name '*'.h
set(SOURCE_FILES

./AnimBlendFrameData.h
./C2dEffect.h
./CAEAudioEntity.cpp
./CAEAudioEntity.h
./CAERadioTrackManager.cpp
./CAERadioTrackManager.h
./CAESound.cpp
./CAESound.h
./CAETwinLoopSoundEntity.h
./CAEVehicleAudioEntity.h
./CAiTimer.h
./CAnimBlendAssociation.h
./CAnimBlendClumpData.h
./CAtomicModelInfo.cpp
./CAtomicModelInfo.h
./CAutomobile.h
./CAutoPilot.h
./CBaseModelInfo.cpp
./CBaseModelInfo.h
./CBox.cpp
./CBox.h
./CBuilding.cpp
./CBuilding.h
./CBulletTraces.cpp
./CBulletTraces.h
./CCam.h
./CCamera.cpp
./CCamera.h
./CCamPathSplines.h
./CCivilianPed.cpp
./CCivilianPed.h
./CClock.cpp
./CClock.h
./CClothes.h
./CClumpModelInfo.cpp
./CClumpModelInfo.h
./CColBox.cpp
./CColBox.h
./CColData.h
./CColLine.cpp
./CColLine.h
./CColModel.h
./CColPoint.cpp
./CColPoint.h
./CColSphere.cpp
./CColSphere.h
./CColTriangle.cpp
./CColTriangle.h
./CColTrianglePlane.cpp
./CColTrianglePlane.h
./CCopPed.cpp
./CCopPed.h
./CCoronas.cpp
./CCoronas.h
./CCrimeBeingQd.h
./CDamageManager.h
./CDarkel.cpp
./CDarkel.h
./CDummy.cpp
./CDummy.h
./CEmergencyPed.cpp
./CEmergencyPed.h
./CEntity.cpp
./CEntity.h
./CEntityScanner.h
./CEventManager.h
./CExplosion.h
./CFileMgr.cpp
./CFileMgr.h
./CFont.cpp
./CFont.h
./CGame.cpp
./CGame.h
./CGarages.cpp
./CGarages.h
./CGeneral.cpp
./CGeneral.h
./cHandlingDataMgr.cpp
./cHandlingDataMgr.h
./CHud.cpp
./CHud.h
./CHudColours.cpp
./CHudColours.h
./CMatrix.cpp
./CMatrix.h
./CMatrixLink.cpp
./CMatrixLink.h
./CMenuManager.cpp
./CMenuManager.h
./CMessages.cpp
./CMessages.h
./CMissionCleanup.cpp
./CMissionCleanup.h
./CModelInfo.cpp
./CModelInfo.h
./CNodeAddress.h
./CObject.h
./CObjectInfo.h
./common.cpp
./common.h
./CompressedVector.cpp
./CompressedVector.h
./COnscreenTimer.h
./CPad.cpp
./CPad.h
./CPed.cpp
./CPed.h
./CPedAcquaintance.h
./CPedCollisionAudio.h
./CPedIK.h
./CPedIntelligence.cpp
./CPedIntelligence.h
./CPedVoice.h
./CPhysical.cpp
./CPhysical.h
./CPlaceable.cpp
./CPlaceable.h
./CPlaneTrail.cpp
./CPlaneTrail.h
./CPlaneTrails.cpp
./CPlaneTrails.h
./CPlayerData.h
./CPlayerInfo.h
./CPlayerPed.h
./CPointLights.cpp
./CPointLights.h
./CPool.h
./CPools.cpp
./CPools.h
./CPtrList.h
./CQuaternion.cpp
./CQuaternion.h
./CQueuedMode.h
./CRadar.cpp
./CRadar.h
./CRealTimeShadow.cpp
./CRealTimeShadow.h
./CRect.cpp
./CRect.h
./CReference.cpp
./CReference.h
./CReferences.cpp
./CReferences.h
./CRegisteredCorona.cpp
./CRegisteredCorona.h
./CRenderer.h
./CRepeatSector.h
./CRGBA.cpp
./CRGBA.h
./CRideAnimData.h
./CRunningScript.cpp
./CRunningScript.h
./CScene.cpp
./CScene.h
./CShadowCamera.cpp
./CShadowCamera.h
./CShadows.cpp
./CShadows.h
./CSimpleTransform.cpp
./CSimpleTransform.h
./CSphere.cpp
./CSphere.h
./CSprite.cpp
./CSprite.h
./CSprite2d.cpp
./CSprite2d.h
./CStats.cpp
./CStats.h
./CStoredCollPoly.h
./CTask.cpp
./CTask.h
./CTaskComplex.cpp
./CTaskComplex.h
./CTaskComplexKillPedOnFoot.cpp
./CTaskComplexKillPedOnFoot.h
./CTaskManager.h
./CTaskSimple.cpp
./CTaskSimple.h
./CTaskSimpleJetpack.h
./CTaskSimpleUseGun.h
./CTexDictionary.cpp
./CTexDictionary.h
./CText.cpp
./CText.h
./CTheScripts.cpp
./CTheScripts.h
./CTheZones.cpp
./CTheZones.h
./CTimeCycleInfo.cpp
./CTimeCycleInfo.h
./CTimeModelInfo.cpp
./CTimeModelInfo.h
./CTimer.cpp
./CTimer.h
./cTransmission.cpp
./cTransmission.h
./CTxdStore.cpp
./CTxdStore.h
./CUserDisplay.cpp
./CUserDisplay.h
./CVector.cpp
./CVector.h
./CVector2D.cpp
./CVector2D.h
./CVehicle.cpp
./CVehicle.h
./CVehicleModelInfo.h
./CVisibilityPlugins.cpp
./CVisibilityPlugins.h
./CWanted.h
./CWantedAudio.h
./CWeapon.cpp
./CWeapon.h
./CWeaponAudio.h
./CWeaponInfo.cpp
./CWeaponInfo.h
./CWeaponModelInfo.cpp
./CWeaponModelInfo.h
./CWorld.cpp
./CWorld.h
./CZone.cpp
./CZone.h
./eCamMode.h
./eCommandName.h
./eCopType.h
./eEntityStatus.h
./eEntityType.h
./ePedState.h
./ePedType.h
./eTaskType.h
./eVehicleHandlingFlags.h
./eVehicleHandlingModelFlags.h
./eWeaponFire.h
./eWeaponFlags.h
./eWeaponType.h
./functions.h
./IFrame.h
./LimbOrienation.h
./RenderWare.h
./RenderWareTypes.h
./RwObjectNameIdAssocation.h
./tBikeHandlingData.h
./tBoatHandlingData.h
./tFlyingHandlingData.h
./tHandlingData.h
./tTransmissionGear.h

)

add_library(plugin-sdk-sa OBJECT ${SOURCE_FILES})
