# find . -name '*'.cpp
set(SOURCE_FILES

./CMissionCleanup.cpp
./CTaskSimple.cpp
./CSimpleTransform.cpp
./CFont.cpp
./CBulletTraces.cpp
./CPools.cpp
./CTheScripts.cpp
./CBaseModelInfo.cpp
./CModelInfo.cpp
./CRealTimeShadow.cpp
./CColBox.cpp
./CEmergencyPed.cpp
./CReferences.cpp
./CQuaternion.cpp
./CVector.cpp
./CUserDisplay.cpp
./CTaskComplexKillPedOnFoot.cpp
./CAEAudioEntity.cpp
./CPedIntelligence.cpp
./CText.cpp
./CAESound.cpp
./CWeapon.cpp
./CGame.cpp
./CSprite.cpp
./CEntity.cpp
./CColTrianglePlane.cpp
./CTask.cpp
./CColPoint.cpp
./CClumpModelInfo.cpp
./CWorld.cpp
./CStats.cpp
./CCivilianPed.cpp
./CBuilding.cpp
./CCamera.cpp
./CPlaneTrails.cpp
./CWeaponInfo.cpp
./CWeaponModelInfo.cpp
./common.cpp
./CPointLights.cpp
./CTimeModelInfo.cpp
./CRGBA.cpp
./CMessages.cpp
./CTxdStore.cpp
./CMatrixLink.cpp
./CompressedVector.cpp
./CHud.cpp
./CSphere.cpp
./CSprite2d.cpp
./CVector2D.cpp
./CVisibilityPlugins.cpp
./CTimeCycleInfo.cpp
./CRect.cpp
./CRadar.cpp
./CColTriangle.cpp
./CGarages.cpp
./CMenuManager.cpp
./CAERadioTrackManager.cpp
./CCopPed.cpp
./CReference.cpp
./CHudColours.cpp
./CCoronas.cpp
./CShadowCamera.cpp
./CTheZones.cpp
./CPhysical.cpp
./CRegisteredCorona.cpp
./CVehicle.cpp
./CBox.cpp
./cTransmission.cpp
./CTaskComplex.cpp
./CClock.cpp
./CDummy.cpp
./CColLine.cpp
./CTimer.cpp
./CMatrix.cpp
./CPlaceable.cpp
./CTexDictionary.cpp
./CAtomicModelInfo.cpp
./CColSphere.cpp
./CDarkel.cpp
./CScene.cpp
./CPed.cpp
./CShadows.cpp
./CRunningScript.cpp
./CGeneral.cpp
./CPlaneTrail.cpp
./CZone.cpp
./cHandlingDataMgr.cpp
./CPad.cpp
./CFileMgr.cpp

)

set(CMAKE_SHARED_LIBRARY_PREFIX "")
add_library(game_sa ${SOURCE_FILES})
